--- a/index.html
+++ b/index.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript</title>
-    <link rel="stylesheet" href="./style/style.css"
+    <link rel="stylesheet" href="./style/style.css" />
 </head>
+
 <body>
-    <div>
-        <div>
+    <div class="pai">
+        <div class="filho1">
             <h1>JavaScript na Prática!</h1>
-            <p>Mostrando em tempo real como alterar layouts com JavaScript.</p>
-            <button>Habilitar</button>
-            <button>Trocar Tema</button>
+            <div>
+                <button class="bt-css">Habilitar CSS</button>
+                <button class="bt-tema">Trocar Tema</button>
+            </div>
         </div>
-        <div>
-            <img src="./img/fametroImg.jpg" alt="Fametro de Frente"/>
+        <div class="filho2">
+            <img src="./img/fametroImg.jpg" alt="Fametro de Frente" />
         </div>
     </div>
 </body>
+
 </html>
