Add initial scripts

--- a/index.html
+++ b/index.html
@@ -9,18 +9,20 @@
 </head>
 
 <body>
-    <div class="pai">
+    <div class="pai" id="pai">
         <div class="filho1">
-            <h1>JavaScript na Prática!</h1>
+            <h1 id="titulo">JavaScript na Prática!</h1>
             <div>
-                <button class="bt-css">Habilitar CSS</button>
-                <button class="bt-tema">Trocar Tema</button>
+                <button class="bt-css" id="habilitarCss">Habilitar CSS</button>
+                <button class="bt-tema" id="mudarTema">Trocar Tema</button>
             </div>
         </div>
         <div class="filho2">
             <img src="./img/fametroImg.jpg" alt="Fametro de Frente" />
         </div>
     </div>
+
+    <script src="./script/script.js"></script>
 </body>
 
 </html>
