Add Basic Responsive Screen

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="pai" id="pai">
         <div class="filho1">
             <h1 id="titulo">JavaScript na Prática!</h1>
-            <div>
+            <div class="buttonGroup">
                 <button class="bt-css" id="habilitarCss">Habilitar CSS</button>
                 <button class="bt-tema" id="mudarTema">Trocar Tema</button>
             </div>
