Add new EventListeners

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         <div class="filho1">
             <h1 id="titulo">JavaScript na Prática!</h1>
             <div class="buttonGroup">
-                <button class="bt-css" id="habilitarCss">Habilitar CSS</button>
+                <button onclick={desabilitarCSS()} class="bt-css" id="habilitarCss">Desabilitar CSS</button>
                 <button class="bt-tema" id="mudarTema">Trocar Tema</button>
             </div>
         </div>
         <div class="filho2">
-            <img src="./img/fametroImg.jpg" alt="Fametro de Frente" />
+            <img src="./img/fametroImg.jpg" alt="Fametro de Frente" id="main-img"/>
         </div>
     </div>
 
